@@ -68,6 +68,8 @@ FNV1a-Mantis                        | Georgi Marinov                            
 FNV1a-Meiyan                        | Georgi Marinov                              | 2012-06-09            | yes      |
 FNV1a-Tesla                         | Georgi Marinov                              | v2                    | yes      |
 FNV1a-Tesla3                        | Georgi Marinov                              | 2013-03-13            | yes      |
+FNV1a-Yorikke                       | Georgi Marinov                              | 2013-05-12            | yes      |
+FNV1a-YoshitsuTRIAD                 | Georgi Marinov                              | 2013-05-12            | yes      |
 FNV1a-Yoshimura                     | Georgi Marinov                              | 2013-03-13            | yes      |
 Grøstl224                           | Soeren S. Thomsen, Krystian Matusiewicz     | SHA3 Final, 64bit opt | yes      |
 Grøstl256                           | Soeren S. Thomsen, Krystian Matusiewicz     | SHA3 Final, 64bit opt | yes      |
