@@ -127,6 +127,8 @@ void fnv1_mantis(char* in, size_t isize, char* out);
 void fnv1_meiyan(char* in, size_t isize, char* out);
 void fnv1_tesla(char* in, size_t isize, char* out);
 void fnv1_tesla3(char* in, size_t isize, char* out);
+void fnv1_yorikke(char* in, size_t isize, char* out);
+void fnv1_yoshimitsu_triad(char* in, size_t isize, char* out);
 void fnv1_yoshimura(char* in, size_t isize, char* out);
 #endif//FSBENCH_USE_SANMAYCE_FNV
 #ifdef FSBENCH_USE_SHRINKER
