@@ -1,4 +1,5 @@
 0.13.2
+[+] added 2 more Sanmayce's hashes
 [!] portability issues
 
 0.13.1
